kubectl/slskd/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: gluetun2
    labels:
        app: gluetun2
spec:
    strategy:
        type: Recreate
    selector:
        matchLabels:
            app: gluetun2
    template:
        metadata:
            labels:
                app: gluetun2
        spec:
            containers:
                # Run whatever you want to ensure is going out the tunnel here
                - name: slskd
                  image: slskd/slskd
                  resources:
                    requests:
                      memory: "1Gi"
                      cpu: "100m"
                    limits:
                      memory: "2Gi"
                      cpu: "1000m"
                  volumeMounts:
                    - mountPath: /app/slskd.yml
                      name: nfs
                      subPath: applications/slskd/volumes/config/slskd.yml
                    - mountPath: /downloads
                      name: nfs
                      subPath: applications/qbittorrent-nox/volumes/downloads/music
                  livenessProbe:
                    httpGet:
                      path: /health
                      port: 5030
                    initialDelaySeconds: 900
                    periodSeconds: 30
                    failureThreshold: 5
            volumes:
              - name: nfs
                persistentVolumeClaim:
                  claimName: truenas-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: gluetun2
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/allow-shared-ip: "shared-ip"
spec:
  type: LoadBalancer
  selector:
    app: gluetun2
  ports:
    - name: manage-http
      port: 5030
      targetPort: 5030
    - name: manage-https
      port: 5031
      targetPort: 5031
    - name: portfwd
      port: 50300
      targetPort: 50300
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slskd-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-ipallowlist-internal@kubernetescrd, kube-system-security-headers@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
spec:
  tls:
    - hosts:
      - slskd.joeberry.org
  rules:
  - host: slskd.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gluetun2
            port:
              number: 5030
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slskd-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-ipallowlist-internal@kubernetescrd, kube-system-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: slskd.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gluetun2
            port:
              number: 5030
